# gs-excel-transformation

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  utils.py
.github/: pull_request_template.md
.github/workflows/: lint.yaml
app/: main.py
app/src/: ui_components.py  utils.py
